--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "prisma": "^5.22.0"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0"
+    "@prisma/client": "^5.22.0",
+    "express": "^4.21.1",
+    "morgan": "^1.10.0"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
